c4prj2_input/grade.txt
Grading at Fri Aug  2 21:49:03 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:22:50: error: operation on ‘str’ may be undefined [-Werror=sequence-point]
    add_card_to(tmp, card_from_letters(*str, *(str++)));
                                                  ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
